<resources>
    <string name="app_name">Call Recorder</string>
    <string name="img_phone">img phone</string>
    <string name="img_date_time">img_date_time</string>
    <string name="txt_modification">MODIFICATION</string>
    <string name="txt_search">Search</string>
    <string name="txt_outgoing">OUTGOING</string>
    <string name="txt_incoming">INCOMING</string>
    <string name="txt_favourite">FAVOURITE</string>
    <string name="txt_no_outgoing_calls">No outgoing call.</string>
    <string name="txt_no_incoming_calls">No incoming call.</string>
    <string name="txt_no_favourite_calls">No favourite call.</string>
    <string name="txt_title_date_of_call">Today</string>
    <string name="img_user">img user</string>
    <string name="txt_number_phone">Number phone</string>
    <string name="int_number_phone">+212666114078</string>
    <string name="img_favourite">img_favourite</string>
    <string name="img_type_of_call">img type of call</string>
    <string name="img_menu">img menu</string>
    <string name="txt_unfavourite">Unfavourite</string>
    <string name="txt_favou">Favourite</string>
    <string name="txt_share">Share</string>
    <string name="txt_open_call_recorder">Open call recorder</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_unknown_number">Unknown</string>
    <string name="txt_outgoing_call">Outgoing call</string>
    <string name="txt_incoming_call">Incoming call</string>
    <string name="txt_delete_call_recorder">Delete call recorder</string>
    <string name="txt_call_recorder_is_not_deleted">Call recorder is not deleted</string>
    <string name="txt_are_you_sure_you">Are you sure you want to delete this call recording ?, data cannot be recovered.</string>
    <string name="txt_call_recorder_is_deleted">Call recorder is deleted</string>
    <string name="txt_information">Recording information</string>
    <string name="txt_end_date">End</string>
    <string name="txt_begin_date">Beginning</string>
    <string name="txt_duration">Duration</string>
    <string name="int_begin_end_date">08-7-2020 06:51 PM</string>
    <string name="img_duration">img_duration</string>
    <string name="int_duration">0 min,5 sec</string>
    <string name="txt_play_call">Play call recorder</string>
    <string name="int_start_time">0:00</string>
    <string name="int_finish_time">0:07</string>
    <string name="img_play">img play</string>
    <string name="img_volume">img volume</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_no">No</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_cannot_get_data">Cannot get call recording data</string>
    <string name="txt_getting_call_recording">Getting call recording data is not possible</string>
    <string name="txt_record_output_location_pref_title">Records output location</string>
    <string name="txt_vibrate_pref_title">Vibrate</string>
    <string name="txt_subject_vibrate_pref_summ">On start and on stop recording </string>
    <string name="txt_turn_on_speaker_pref_title">Turn on speaker</string>
    <string name="txt_subject_turn_on_speaker_pref_summ" />
    <string name="txt_max_volume_pref_title">Max up volume</string>
    <string name="txt_subject_max_volume_pref_summ">improve audio quality</string>
    <string name="txt_pref_audio_source_pref_title">Audio source</string>
    <string name="txt_pref_output_format_title">Output format</string>
    <string name="txt_pref_audio_encoder_title">Audio encoder</string>
    <string name="txt_setting_pref">Settings</string>
    <string name="txt_today">Today</string>
    <string name="txt_yesterday">Yesterday</string>
    <string name="txt_older">Older</string>
    <string name="txt_call">Call</string>
    <string name="txt_runtime_permissions_not_granted_title">Runtime permissions not granted</string>
    <string name="txt_runtime_permissions_not_granted_message">Some of the requested runtime permissions are not granted. Consider granting them manually as soon as possible. Otherwise application performance may misbehave.</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_receiver">Receiver</string>
    <string name="txt_additional_receiver">Additional receiver</string>
    <string name="txt_service">Service</string>
    <string name="txt_additional_service">Additional service</string>
    <string name="txt_privicy_policy">Privacy Policy</string>
    <string name="url_privicy_policy">https://sites.google.com/view/developecallrecorder</string>
    <string name="txt_light_mode">Light Mode</string>
    <string name="txt_dark_mode">Dark Mode</string>
    <string name="txt_running">Running...</string>
    <string name="txt_is_active"> is active.</string>
    <string name="txt_currently_progress">Call recording is currently in progress.</string>
    <string name="_04_00_pm_n_00_03_30">04:00 PM\n(00:03:30)</string>


</resources>
